package cz.bodnor.serviceslicer.domain.job

enum class JobStatus {
    RUNNING,
    PENDING,
    COMPLETED,
    FAILED,
}
